Added copyright to footer

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   padding: 0;
   background-color: black;
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 body {
@@ -44,7 +45,7 @@ body {
 
 #footer {
   border: 2px solid blue;
-  height: 48px;
+  padding: 10px;
   bottom: 0;
 }
 
